--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "laracasts/flash": "^3.2",
         "laravel/framework": "^6.20",
         "laravel/tinker": "^2.5",
-        "laravel/ui": "1.3.*"
+        "laravel/ui": "1.3.*",
+        "twbs/bootstrap": "5.1.1"
     },
     "require-dev": {
         "facade/ignition": "^1.16.4",
